--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.main-section {
+    
+    width: 70%;
+    
+    margin: 0 auto;
+
+}
+
+h1 {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 2rem;
+}
+
+
+
+
+
+
+
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
