--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,8 @@ h1 {
     float: left;
     color: white;
     font-size: 10px;
-    padding: 5px 10px 20px 5px;
+    padding: 10px 20px 10px 10px;
+    
     
     
 }
@@ -89,10 +90,7 @@ img {
     
 }
 
-span {
-    margin-left: 10px; 
-    margin-bottom: 20px;
-    
-    
-}
 
+.mail { 
+    color: rgb(0, 89, 255);
+}
